--- a/style.css
+++ b/style.css
@@ -111,12 +111,17 @@ nav ul li a:hover {
     height: 600px;
     background-color: #6bcb78d3;
 }
+.content-1 ul h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 80px;
+    color: #ffffff;
+}
 .content-1 ul li {
     color: #ffffff;
 }
 .text1 {
     font-family: 'Oswald', sans-serif;
-    font-size: 80px;
+    font-size: 60px;
     margin-bottom: 20px;
 }
 .text2 {
@@ -133,20 +138,47 @@ nav ul li a:hover {
 }
 .content-3 {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     padding: 10px;
     align-items: center;
     height: 200px;
     background-color: #4d97ffd0;
 }
+.content-3 ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-right: 200px;
+}
+h2 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 40px;
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+.info,
+.sosmed {
+    color: #ffffff;
+}
+.sosmed p{
+    padding-bottom: 10px;
+}
+
+/* FOOTER */
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 30px;
+    color: #ffffff;
     background-color: #4D96FF;
     font-family: 'Oswald', sans-serif;
+    font-size: 15px;
 }
 
 
@@ -166,7 +198,10 @@ footer {
         flex-direction: column;
     }
     .text1 {
-        font-size: 60px;
+        font-size: 50px;
+    }
+    .info {
+        margin-right: 100px;
     }
 }
 
@@ -210,5 +245,17 @@ footer {
     }
     .text2 {
         font-size: 16px;
+    }
+    .content-3 {
+        height: 400px;
+    }
+    .content-3 ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    footer {
+        font-size: 12px;
     }
 }
