--- a/admin_login.css
+++ b/admin_login.css
@@ -16,7 +16,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #4D96FF;
+    background-color: #6BCB77;
     width: 100%;
     height: 60px;
     margin: 0px;
@@ -38,30 +38,42 @@ nav {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    font-size: 25px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 15px;
     padding: 25px 20px;
     width:25%;
     color:black;
-    font-weight: bold;
+    /* font-weight: bold; */
     cursor: pointer;
-    border: solid #4D96FF;
+    border: solid #6BCB77;
+    
 }
 
 .content h1{
     text-align: center;
     padding : 0px 0px 20px 0px;
+    border-bottom: solid #6BCB77;
 }
 
 .content form{
-    padding :0px 40px;
+    padding :0px 50px;
     box-sizing: border-box;
 }
 
 .content p {
     padding-left: 10px;
     text-decoration: none;
+    font-family: 'Rubik', sans-serif;
     font-size: 15px;
-    color: #6293e8;
+    color: #6BCB77;
+    margin-top: 20px;
+}
+.content p a {
+    color: #6BCB77;
+    text-decoration: none;
+}
+.content p a:hover {
+    color: #389d45;
 }
 .center{
     position: absolute;
@@ -96,12 +108,12 @@ form .txt_field{
 }
 .txt_field label{
     position: absolute;
-    top: 50px;
+    top: -15px;
     left: 5px;
     color: #adadad;
-    transform: translateY(-50%);
     font-size: 16px;
     pointer-events: none;
+    font-family: 'Rubik', sans-serif;
     transition: .5s;
 }
 .txt_field span::before{
@@ -137,7 +149,8 @@ input[type="submit"]{
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: whitesmoke;
+    font-family: 'Rubik', sans-serif;
+    background: #6BCB77;
     border-radius: 25px;
     font-size: 18px;
     color: black;
