--- a/style.css
+++ b/style.css
@@ -9,10 +9,9 @@ body {
     font-family: 'Rubik', sans-serif;
     overflow-x: hidden;
     background-image: url(https://pantirapih.or.id/rspr/wp-content/uploads/2022/04/imunisasi-anak-2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center;
-    position: relative;
+    background-size: 100% 100%;
+    background-attachment:fixed;
+    background-repeat: repeat-y;
     transition: .2s ease;
 }
 
@@ -39,7 +38,7 @@ nav {
 .menu-1 {
     display: flex;
     justify-content: space-around;
-    width: 25%;
+    width: 35%;
 }
 .menu-2 {
     display: flex;
@@ -104,12 +103,15 @@ nav ul li a:hover {
 }
 .content-1 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     padding: 10px;
     align-items: center;
     height: 600px;
-    background-color: #6bcb78d3;
+    background-color: #4d97ffd9;
+}
+.content-1 ul {
+    margin-bottom: 50px;
 }
 .content-1 ul h1 {
     font-family: 'Oswald', sans-serif;
@@ -122,10 +124,15 @@ nav ul li a:hover {
 .text1 {
     font-family: 'Oswald', sans-serif;
     font-size: 60px;
-    margin-bottom: 20px;
+    /* margin-top: 15px;
+    margin-bottom: 50px; */
+    color: #000000;
 }
 .text2 {
+    display: flex;
+    flex-direction: column;
     font-size: 20px;
+    color: #000000;
 }
 .content-2 {
     display: flex;
@@ -133,18 +140,52 @@ nav ul li a:hover {
     justify-content: center;
     padding: 10px;
     align-items: center;
-    height: 600px;
-    background-color: #ffffffab;
+    height: 80vh;
+    background-color: #ffffffde;
 }
 .content-3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px;
+    align-items: center;
+    height: 500px;
+    background-color: #6bcb78d2;
+}
+.text3 {
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    color: #000000;
+}
+.text3 p:nth-child(1) {
+    margin-right: 250px;
+}
+.text3 p a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: #000000;
+}
+.text3 p a:hover {
+    color: #e9e5e5;
+}
+.text3 p a img {
+    width: 80px;
+    margin-bottom: 15px;
+}
+
+
+.contact {
     display: flex;
     justify-content: center;
     padding: 10px;
     align-items: center;
     height: 200px;
-    background-color: #4d97ffd0;
+    background-color: #4d97ffe9;
 }
-.content-3 ul {
+.contact ul {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -154,6 +195,9 @@ nav ul li a:hover {
     flex-direction: column;
     justify-content: space-evenly;
     margin-right: 200px;
+}
+.info p{
+    font-weight: 1;
 }
 h2 {
     font-family: 'Oswald', sans-serif;
@@ -165,16 +209,14 @@ h2 {
 .sosmed {
     color: #ffffff;
 }
-.sosmed p{
-    padding-bottom: 10px;
-}
+
 
 /* FOOTER */
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30px;
+    height: 40px;
     color: #ffffff;
     background-color: #4D96FF;
     font-family: 'Oswald', sans-serif;
@@ -187,9 +229,14 @@ footer {
 /* RESPONSIVE */
 
 /* UKURAN TABLET */
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 800px) {
+    body {
+        background-size: 100% 60%;
+        background-attachment:fixed;
+        background-repeat: repeat-y;
+    }
     .menu-1 {
-        width: 35%;        
+        width: 45%;        
     }
     .menu-2 {
         width: 20%;
@@ -197,9 +244,16 @@ footer {
     .content-1 {
         flex-direction: column;
     }
+    .content-1 ul h1 {
+        font-size: 55px;
+    }
     .text1 {
         font-size: 50px;
     }
+    .text3 p:nth-child(1) {
+        margin-right: 150px;
+    }
+
     .info {
         margin-right: 100px;
     }
@@ -207,6 +261,11 @@ footer {
 
 /* UKURAN MOBILE */
 @media screen and (max-width: 580px) {
+    body {
+        background-size: 100% 40%;
+        background-attachment:fixed;
+        background-repeat: repeat-y;
+    }
     .menu-toggle {
         display: flex;
     }
@@ -240,21 +299,48 @@ footer {
         height: 635px;
         flex-direction: column;
     }
+    .content-1 ul h1 {
+        font-size: 50px;
+    }
     .text1 {
         font-size: 45px;
     }
     .text2 {
         font-size: 16px;
     }
-    .content-3 {
+    .text3 {
+        font-size: 16px;
+    }
+    .text3 p:nth-child(1) {
+        margin-right: 100px;
+    }
+    .contact {
         height: 400px;
     }
-    .content-3 ul {
+    .contact ul {
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
 
+    .contact {
+        height: 300px;
+    }
+    .contact ul {
+        display: flex;
+        flex-direction: column;
+    }
+    .info {
+        margin-right: 0px;
+    }
+    .info p{
+        font-weight: 1;
+        margin-bottom: 20px;
+    }
+    h2 {
+        font-size: 30px;
+    }
+    
     footer {
         font-size: 12px;
     }
