--- a/admin_login.css
+++ b/admin_login.css
@@ -41,22 +41,20 @@ nav {
     font-family: 'Oswald', sans-serif;
     font-size: 15px;
     padding: 25px 20px;
-    width:25%;
-    color:black;
-    /* font-weight: bold; */
-    cursor: pointer;
+    width:30%;
+    color:#6BCB77;
     border: solid #6BCB77;
-    
 }
 
 .content h1{
     text-align: center;
-    padding : 0px 0px 20px 0px;
-    border-bottom: solid #6BCB77;
+    padding : 0px 0px 15px 0px;
+    margin-bottom: 5px;
+    border-bottom: 4px solid #6BCB77;
 }
 
 .content form{
-    padding :0px 50px;
+    padding :0px 30px;
     box-sizing: border-box;
 }
 
@@ -74,6 +72,7 @@ nav {
 }
 .content p a:hover {
     color: #389d45;
+    border-bottom: 1px solid #389d45;
 }
 .center{
     position: absolute;
@@ -89,12 +88,12 @@ nav {
     padding : 0 0 20px 0;
 }
 .center form{
-    padding :0 40px;
+    padding :0 35px;
     box-sizing: border-box;
 }
-form .txt_field{
+.txt_field{
     position: relative;
-    border-bottom: 2px solid #adadad;
+    border-bottom: 2px solid #a6dead;
     margin: 30px 0;
 }
 .txt_field input{
@@ -110,74 +109,54 @@ form .txt_field{
     position: absolute;
     top: -15px;
     left: 5px;
-    color: #adadad;
+    color: #6BCB77;
     font-size: 16px;
-    pointer-events: none;
     font-family: 'Rubik', sans-serif;
     transition: .5s;
-}
-.txt_field span::before{
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: aliceblue;
-}
-.txt_field input:focus ~ label,
-.txt_field input:focus ~ label{
-    top: -5px;
-    color: aliceblue;
-}
-
-.txt_field input:focus ~ span::before,
-.txt_field input:focus ~ span::before{
-    width: 100%;
-}
-.pass{
-    margin: -5px 0 20px 5px;
-    color: #a6a6a6;
-    cursor: pointer;
-}
-
-.pass:hover{
-    text-decoration: underline;
 }
 
 input[type="submit"]{
     width: 100%;
     height: 50px;
-    border: 1px solid;
+    border: none;
     font-family: 'Rubik', sans-serif;
     background: #6BCB77;
     border-radius: 25px;
     font-size: 18px;
-    color: black;
+    color: white;
     font-weight: 700;
     cursor: pointer;
     outline: none;
 }
 
 input[type="submit"]:hover{
-    border-color: #2596be;
-    transition: .5s;
+    background-color: #3bb84c;
+    transition: .3s;
 }
 
-.btn{
-    width: 100%;
-    height: 50px;
-    border: 1px solid;
-    background: whitesmoke;
-    border-radius: 25px;
-    font-size: 18px;
-    color: black;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
+
+/* RESPONSIVE */
+
+/* UKURAN TABLET */
+@media screen and (max-width: 950px) {
+    .content{
+        top: 50%;
+        left: 50%;
+        width: 40%;
+    }
+    .content form{
+        padding :2px 25px;
+    }
 }
 
-.btn:hover{
-    border-color: #2596be;
-    transition: .5s;
+/* UKURAN MOBILE */
+@media screen and (max-width: 630px) {
+    .content{
+        top: 50%;
+        left: 50%;
+        width: 65%;
+    }
+    .content form{
+        padding : 2px 15px;
+    }
 }
