--- a/login_register2.css
+++ b/login_register2.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #4D96FF;
+    background-color: #6BCB77;
 }
 .container{
     position: relative;
@@ -56,7 +56,7 @@ body{
     bottom: 0;
     height: 3px;
     width: 30px;
-    background-color: #4D96FF;
+    background-color: #6BCB77;
     border-radius: 25px;
 }
 .form .input-field{
@@ -78,7 +78,7 @@ body{
     transition: all 0.2s ease;
 }
 .input-field input:is(:focus, :valid){
-    border-bottom-color: #4D96FF;
+    border-bottom-color: #6BCB77;
 }
 .input-field i{
     position: absolute;
@@ -89,7 +89,7 @@ body{
     transition: all 0.2s ease;
 }
 .input-field input:is(:focus, :valid) ~ i{
-    color: #4D96FF;
+    color: #6BCB77;
 }
 .input-field i.icon{
     left: 0;
@@ -111,14 +111,14 @@ body{
 }
 .checkbox-content input{
     margin: 0 8px -2px 4px;
-    accent-color: #4D96FF;
+    accent-color: #6BCB77;
 }
 .form .text{
     color: #333;
     font-size: 14px;
 }
 .form a.text{
-    color: #4D96FF;
+    color: #6BCB77;
     text-decoration: none;
 }
 .form a:hover{
@@ -134,7 +134,7 @@ body{
     font-weight: 500;
     letter-spacing: 1px;
     border-radius: 6px;
-    background-color: #4D96FF;
+    background-color: #6BCB77;
     cursor: pointer;
     transition: all 0.3s ease;
 }
