--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ nav ul li a:hover {
     width: 100%;
     height: 200px;
     padding-left: 7px;
+    translate: ;
     border: none;
     outline: none;
     color: #162841;
@@ -338,10 +339,12 @@ nav ul li a:hover {
     margin-bottom: 20px;
     font-size: 30px;
 }
-.form-user form table{
+form table{
+    position: absolute;
     top: 52%;
     left: 48%;
     justify-content: center;
+    transform: translate(-50%,-50%);
     width: 85%;
     border: 2px solid #4D96FF;
     margin: 20px 20px;
@@ -635,7 +638,6 @@ footer {
     form table{
         top: 55%;
         left: 45%;
-        width: 95%;
         margin: 55px 20px;
         padding: 5px 15px;
     }
