--- a/style2.css
+++ b/style2.css
@@ -189,6 +189,7 @@ h1 {
 .feedback table {
     width: 100%;
     padding: 15px;
+    margin: 10px;
     border-radius: 10px;
     background-color: #6bcb787c;
     box-shadow: 1.5px 1.5px 1.5px 0px rgb(53, 76, 101);
