--- a/style.css
+++ b/style.css
@@ -224,13 +224,17 @@ nav ul li a:hover {
 .content-4 {
     display: flex;
     flex-direction: row;
-    padding: 30px;
     justify-content: center;
+    padding: 30px;
     height: 500px;
     background-color: #ffffffde;
 }
+.feedback,
+.feedback form table tr td{
+    width: 100%;
+}
 .feedback form {
-    padding: 10px 25px 10px 10px;
+    padding: 10px;
 }
 .feedback form table tr td input[type="text"] {
     width: 100%;
